--- a/CS/DataBase/인덱스.md
+++ b/CS/DataBase/인덱스.md
@@ -1,6 +1,6 @@
 # [CS] 인덱스
 
-## 인덱스
+## Index
 
 인덱스는 데이터베이스 테이블에 대하여 검색 속도를 향상시켜주는 자료구조이다.
 
@@ -41,7 +41,7 @@
 
 ![이진 트리의 종류](<이진 트리의 종류.png>)
 
-### B-트리 인덱스 (B-tree Index)
+### B-Tree
 
 가장 일반적으로 사용되는 인덱스의 타입이다.
 
@@ -68,18 +68,168 @@
   <br>
   `B-Tree`에서 차수는 트리의 높이를 낮추고, 디스크 접근을 줄이며, 삽입, 삭제, 검색 등의 연산을 효율적으로 수행하는데 중요한 역활을 한다. 따라서, 차수는 `B-Tree`의 성능과 저장 구조과 저장 구조를 결정하는데 핵심적인 매개변수이다.
 
-해당 인덱스는 정렬된 데이터를 유지하고, 검색, 삽입, 삭제 작업에서 $O(log n)$의 성능을 제공한다.
-주로 범위 검색에 유리하다.
+`B-Tree`를 예제를 들어서 설명을 하면
+블럭 = 서랍, 데이터 = 편지 라고 가정을 하겠다.
+편지 하나를 큰 서랍에 넣는다고 생각을 할 때, 서랍의 크기는 2KB인데 편지 하나만 서랍에 넣어두면 해당 서랍은 3byte의 크기인 편지하나와 빈 공간의 서랍이 된다.  
+이때 서랍을 여닫을 때 드는 비용은 해당 서랍이 비어 있든, 가득 차 있든 들어가는 비용은 동일하다. **즉, 공간이 낭비되는 것이다.**
 
-각각의 노드 내 데이터들은 항상 정렬된 상태인 것이 특징이며, 데이터와 데이터 사이의 범위를 이용하여 자식 노드를 갖는다. (자식 노드의 수는 n+1개)
-또한, 하나의 노드에서는 여러 갸의 키를 가질수 있으며 키에 해당하는 데이터 또한 같이 갖는다.
+`B-Tree`는 하나의 노드(서랍)에 여러 개의 데이터를 저장하여 블럭을 최대한 활용을 한다.
+이제 서랍에 여러 개의 편지를 넣어 관리를 한다. 편지 여러 장을 한 서랍에 넣으면 서랍을 여닫는 횟수를 줄일 수 있고, 서랍 하나당 더욱 많은 데이터를 저장할 수 있다. 이를 통하여 서랍을 효율적으로 관리할 수 있다.
 
-### B+트리 인덱스 (B+tree Index)
+`B-Tree`는 데이터를 정렬하고 조직화 하여 저장을 한다. 따라서 필요한 데이터를 빠르게 찾을 수 있고, 블럭(서랍)을 확인하는 횟수가 줄어든다.
+추가적으로 여러 데이터를 넣으면, 필요한 데이터를 한 번에 더 많이 처리할 수 있다.
 
-해당 인덱스는 `B-tree Index`의 변형된 구조이다. 그렇기 때문에 몇가지의 부분은 비슷하지만 차이점이 존재한다.  
-해당 인덱스는 균형 잡힌 이진 검색 트리이다. `B-tree Index`에 비하여 더 많은 키를 가질 수 있다.
+이러한 `B-Tree`는 항상 균형을 유지하므로, 트리의 높이가 낮아진다. 이는 데이터 검색, 삽입, 삭제 시 연산 시간을 일정하게 유지하는 데 도움이 된다. 그리고 블럭 단위로 데이터를 저장하므로, 하나의 노드에 여러 키와 포인터를 저장한다. 그렇기 때문에 디스크 I/O를 줄이는 부분에서 도움이 된다.
 
-`B+tree Index`는 `B-tree Index`와 달리 내부 노드와 단말 노드로 구분이 된다. `B+tree Index` 모든 데이터는 단말 노드에서만 저장이 가능하며, 내부 노드에서는 검색을 위한 인덱스만 저장이 된다.
+`B-Tree`는 모든 연산(검색, 삽입, 삭제)이 $O(lob$ $n)$의 시간 복잡도를 가지므로, 데이터 양이 많이져도 성능은 크게 저하되지 않는다.
+
+#### B-Tree 예
+
+1. 초기 상태  
+   리프 노드 [2, 4, 6]
+
+2. 데이터 삽입 후 분할
+   - 키 8을 삽입
+   - 리프 노드가 가득 차므로 분할이 필요하다.
+
+```css
+       [4]
+     /    \
+ [2, 4]  [6, 8]
+```
+
+3. 데이터 삽입 후 분할
+   - 키 10을 삽입 후 리프 노드 분할
+
+```css
+분할 전
+       [4]
+     /    \
+ [2, 4]  [6, 8, 10]
+
+분할 후
+         [4, 10]
+       /    |    \
+ [2, 4]  [6, 8]  [10, 12]
+```
+
+#### 특징
+
+- 데이터 노드의 자료는 정렬되어 있다.
+- 자료는 중복되지 않는다.
+- 모든 리프 노드는 같은 레벨상에 있다.
+- 루트 노드는 자신이 리프 노드가 되지 않는 이상 적어도 2개 이상의 자식 노드를 갖느다.
+- 루트 노드와 리프 노드를 제외한 노드들은 최대 M개 부터 최소 M/2개 까지의 자식을 가질 수 있다.
+- 노드의 키는 최대 M-1개부터 최소(M/2)-1개의 키가 포함될 수 있다.
+- 자식 수의 하한값을 $t$라고 하면, M=2$t$-1을 만족한다.
+
+---
+
+### B\*Tree
+
+`B*Tree 인덱스`는 `B-Tree`의 한 변형으로 `B-Tree`는 노드가 가득 차면 즉시 분할하므로, 분할이 자주 발생할 수 있다는 부분과 노드가 반쯤 비어있는 경우가 많아서 디스크 공간을 비효율적으로 사용하게 된다는 문제점이 있어 이를 해결하기 위해서 개발되었다.
+
+`B*Tree`의 각 노드는 `B-Tree`의 노드보다 더 많은 자식 노드를 가질 수 있다. 그리고 노드가 분할될 때, 분할된 데이터를 인접 노드로 분산시켜 트리의 균형을 유지한다. 마지막으로 노드 분할 시 인접 노드와 데이터를 재배치하여 공간 활용을 최적화 한다.
+
+`B-Tree`와의 차이점으로 최소 M/2개의 키값을 가져야 했던 기존 노드의 자식 노드 수 최소 제약 조건이 2M/3로 증가하고, 노드가 가득 타면 분할 대신에 인접 노드와 데이터를 재배치를 한다.
+(만약 추가적인 재배치가 불가능 할 경우는 분할을 한다.)
+
+#### B\*Tree 예
+
+1. 초기 상태
+
+   - 리프 노드 : [2, 4, 6]
+   - 인접 노드 : [10, 12]
+
+2. 데이터 삽입
+   - 키 8을 삽입
+
+```css
+        [6]
+      /    \
+ [2, 4]  [8, 10, 12]
+```
+
+3. 인접 노드로 분할
+
+```css
+         [6, 10]
+       /    |    \
+ [2, 4]  [8]  [10, 12]
+```
+
+#### 특징
+
+- 데이터 노드의 자료는 정렬되어 있다.
+- 자료는 중복되지 않는다.
+- 모든 리프 노드는 같은 레벨상에 있다.
+- 루트 노드는 자신이 리프 노드가 되지 않는 이상 적어도 2개 이상의 자식 노드를 갖느다.
+- 루트 노드가 아닌 노드들은 적어도 2[(M-2)/3]+1개의 자식 노드를 갖고 있다.
+
+---
+
+### B+Tree
+
+`B-Tree`에서 내부 노드와 리프 노드 모두에 키와 데이터를 저장한다. 이는 데이터가 많을수록 검색 성능이 떨어지는 문제점이 있고, 범위 검색에 있어서 모든 리프 노드를 순차적으로 탐색해야 하기 때문에 비효율적이다. 이러한 문제점을 극복한 `B+Tree`가 나타났다.
+
+`B+Tree`의 내부 노드와 리프 노드의 분리를 했다.  
+내부 노드는 키만 저장하고ㅡ 리프 노드는 키와 데이터 모드를 저장을 한다. 그리고 모든 실제 데이터는 리프 노드에만 저장이 되며, 내부 노드는 데이터 검색을 위한 경로를 제공한다.
+
+리프 노드들은 연결 리스트 형태로 연결되어 있다. 이는 범위 검색과 순차 접근을 더 효율적으로 만든다.
+
+`B-Tree`와 마찬가지로 항상 균형을 유지한다. 그래서 삽입과 삭제 시 자동으로 균형을 맞춘다.
+
+#### B+Tree 예
+
+- 내부 노드 : 키만 저장하며, 자식 노드를 가리키는 포인터를 포함한다.
+- 리프 노드 : 키와 데이터를 모두 저장하며, 다음 리프 노드를 가리키는 포인터를 포함한다.
+
+1. 초기 B+Tree
+   - 리프 노드 : [2, 4, 6, 8]
+   - 내부 노두 : [4] (두 자식 노드를 가리킴)
+
+```css
+     [4]
+   /    \
+[2, 4]  [6, 8]
+
+```
+
+2. 데이터 삽입
+   - 새로운 키 10을 삽입한다. 리프 노드 [6, 8]에 공간이 있으므로 키 10을 삽입한다.
+   - 리프 노드 : [2, 4], [6, 8, 10]
+
+```css
+       [4]
+     /    \
+ [2, 4]  [6, 8, 10]
+
+```
+
+3. 리프 노드 분할
+   - 새로운 키 12를 삽입하면 리프 노드 [6, 8, 10]이 가득 차므로 분할이 필요하다.
+   - 리프 노드 분할 후 : [6, 8], [10, 12]
+   - 내부 노드 갱신 : [4, 10]
+
+```css
+         [4, 10]
+       /    |    \
+ [2, 4]  [6, 8]  [10, 12]
+
+```
+
+4. 범위 검색
+   - `B+Tree` 에서 6에서 12 사이의 데이터를 검색하면, 리프 노드 [6,8] 부터 [10, 12] 까지 순차적으로 접근하여 데이터를 효율적으로 검색할 수 있다.
+
+#### 특징
+
+- 데이터 노드의 자료는 정렬되어 있다.
+- 데이터 노드에서는 데이터 중복되지 않는다.
+- 모든 리프 노드는 같은 레벨상에 있다.
+- 리프 노드가 아닌 노드의 키값의 수는 그 노드의 서브트리수보다 하나가 적다.
+- 모든 리프 노드는 연결 리스트로 연결되어 있다.
+
+---
 
 ### 해시 인덱스 (Hash Index)
 
