--- a/Coding_Test/달팽이패턴으로 배열 채우기.md
+++ b/Coding_Test/달팽이패턴으로 배열 채우기.md
@@ -2,7 +2,7 @@
 
 [Lv.2 삼각 달팽이](https://school.programmers.co.kr/learn/courses/30/lessons/68645)
 
-이 문제는 정수 n이 1에서 1,000 사이의 값이 주어질 때, 높이 n, 넓이 n 크기의 피라미드를 만들고 제일 상단에 있는 하나의 블럭을 시작으로 반 시계 방향으로 숫자를 +1씩 채워 나간다.   
+이 문제는 정수 n이 1에서 1,000 사이의 값이 주어질 때, 높이 n, 넓이 n 크기의 피라미드를 만들고 제일 상단에 있는 하나의 블럭을 시작으로 반 시계 방향으로 숫자를 +1씩 채워 나간다.  
 해당 피라미드를 다 만들고 상단의 행 부터 제일 하단의 행의 순서대로 1차 배열을 반환하면 되는 문제이다.
 
 ```shell
@@ -16,14 +16,14 @@
 ```
 
 ```java
-// n = 4 
+// n = 4
 int[] answer = {1, 2, 9, 3, 10, 8, 4, 5, 6, 7};
 
 // n = 5
 int[] answer = {1, 2, 12, 3, 13, 11, 4, 14, 15, 10, 5, 6, 7, 8, 9};
 ```
 
-나는 이 문제를 풀기 위해서 삼각형 배치에 있어서 어떠한 공식이 있는 줄 알았다. 그래서 직접 노트에 $n$의 값이 1인 경우 부터 10 까지의 피라미드를 직접 그려보았다.   
+나는 이 문제를 풀기 위해서 삼각형 배치에 있어서 어떠한 공식이 있는 줄 알았다. 그래서 직접 노트에 $n$의 값이 1인 경우 부터 10 까지의 피라미드를 직접 그려보았다.
 
 직접 그리면서 몇 가지의 규칙을 발견을 했다. 가장 먼저 확인한 규칟은 가장 쉽게 발견할 수 있는 피라미드에 사용된 블럭의 수를 구하는 방법이다.
 
@@ -33,8 +33,7 @@ int[] answer = {1, 2, 12, 3, 13, 11, 4, 14, 15, 10, 5, 6, 7, 8, 9};
 
 다음으로 피라미드 외곽 부분에서 꺽이는 부분들의 수의 크기를 구하는 공식을 발견했다.
 
-
-하지만 이러한 정보들을 사용해서 당장 달팽이 패턴으로 피라미드에 숫자를 채우기에는 잘못 접근했었다. 
+하지만 이러한 정보들을 사용해서 당장 달팽이 패턴으로 피라미드에 숫자를 채우기에는 잘못 접근했었다.
 꺽이는 부분에 숫자를 알고있다고 어떻게 배열을 만들 것인가...
 
 뭐 만들기는 가능하겠지만 내가 원하는 채우는 숫자의 증가와 동시에 블럭에 순차적으로 채우기는 힘들어 보인다.
@@ -43,10 +42,48 @@ int[] answer = {1, 2, 12, 3, 13, 11, 4, 14, 15, 10, 5, 6, 7, 8, 9};
     for(int i=0; i<n; i++){
         for(int j = 0; j<n; j++){
             if(i<0||i>=n||j<0||j>=n) {
-            // 2차 배열 인덱스 조정    
+            // 2차 배열 인덱스 조정
             }
         }
     }
 ```
-곰곰히 생각해낸 방법이다. i와 j가 주어진 n의 크기보다 크거나 같을 때 그리고 0 보다 작을 때를 발견하여 인덱스값이 조절해야겠다!
 
+곰곰히 생각해서 작성한 코드다.  
+ i와 j가 주어진 n의 크기보다 크거나 같을 때 그리고 0 보다 작을 때를 찾아서 적절한 인덱스값을 조절해야겠다고 생각했다.  
+ 방법은 여러가지 방법이 있겠지만. 인덱스의 위치에 따라 방법 x, y의 좌표를 +1을 하거나 -1을 하는 방법을 선택했다.
+
+```java
+int navIndex = 0;
+int[][] nav = {{1, 0}, {0, 1}, {-1, -1}};
+
+// 반복문 내부
+
+int next_x = x + nav[navIndex][0];
+int next_y = y + nav[navIndex][1];
+
+if(next_x<0||next_x>=n||next_y<0||next_y>=n) {
+   navIndex=(navIndex+1)%3;
+}
+```
+
+위 처럼 조건문을 통하여 각 포인트에 도달했을 때, 다음 방향으로 방향을 틀어서 값을 채우기 위해서 작성을 했다.
+
+위 코딩테스트 문제에서는 삼각형이라는 조건이 있어서
+
+```java
+int[][] nav = {{1, 0}, {0, 1}, {-1, -1}};
+```
+
+이렇게 작성을 했었지만, 사각형일 경으
+
+```java
+int[][] nav = {{1, 0}, {0, 1}, {-1, 0}, {0, -1}};
+
+if(next_x<0||next_x>=n||next_y<0||next_y>=n) {
+    navIndex=(navIndex+1)%4;
+}
+```
+
+이렇게 작성하면 사격형 모양으로 반 시계 방향대로 배열에 값을 채워 넣을 수 있게된다.
+
+[완성한 코드](https://github.com/jae9380/Coding_Test-By.Mac-/blob/main/Java/프로그래머스/2/68645.%E2%80%85삼각%E2%80%85달팽이/삼각%E2%80%85달팽이.java)
