--- a/Coding_Test/재귀적 탐색.md
+++ b/Coding_Test/재귀적 탐색.md
@@ -1,6 +1,6 @@
 # 재귀적 탐색
 
-## [유사 칸토어 비열 Lv.2](https://school.programmers.co.kr/learn/courses/30/lessons/148652)   
+## [유사 칸토어 비트열 Lv.2](https://school.programmers.co.kr/learn/courses/30/lessons/148652)   
 
 처음에는 해당 문제를 읽고 완벽한 이해는 불가능 했다. 하지만 다시 자세히 읽어보니 이해를 했었다.   
 
